kubernetes-manifests/api-gateway/api-gateway.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: api-gateway
    tier: backend
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
      tier: backend
  template:
    metadata:
      labels:
        app: api-gateway
        tier: backend
    spec:
      imagePullSecrets:
        - name: ghcrcred
      containers:
        - image: ghcr.io/liberty52/liberty52-api-gateway:dev-v-2023.10.31-011912
          name: liberty-gateway
          resources: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
    tier: backend
  name: api-gateway
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: api-gateway
    tier: backend
